--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 </head>
 
-<body style="background-color: rgb(235, 235, 235);">
+<body">
     <header class="header">
         <div class="left-sec"></div>
         <div class="mid-sec">
