--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 </head>
 
-<body">
+<body>
     <header class="header">
         <div class="left-sec"></div>
         <div class="mid-sec">
